--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
 
-base="dark"
-primaryColor="#d33682"
-backgroundColor="#000000"
-secondaryBackgroundColor="#586e75"
-textColor="#fafafa"
+base="light"
+primaryColor="#007bff"
+backgroundColor="#f0f2f6"
+secondaryBackgroundColor="#e9ecef"
+textColor="#212529"
 font="sans serif"
