Add ConfigurationAnalysisAgent and DataChatAgent to app.py; implement configuration-based analysis and chat functionalities. Update README with usage instructions and examples. Enhance app with sample configuration file and integrate new dependencies in requirements.txt.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,11 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "psutil>=7.0.0",
+    "pyyaml>=6.0.2",
     "scikit-learn>=1.6.1",
     "sqlalchemy>=2.0.40",
     "streamlit>=1.44.1",
     "watchdog>=6.0.0",
     "xgboost>=3.0.0",
+    "ydata-profiling",
 ]
