Update MODEL_LIST in app.py to streamline model options and enhance Polish language support in example questions. Remove outdated sample configuration files and improve data visualization in data_visualization.py with a horizontal stacked bar chart. Refactor data_wrangler.py to enhance data processing logic and ensure accurate percentage calculations for classifications.

--- a/apps/pandas-data-analyst-app/sample_config.yaml
+++ b/apps/pandas-data-analyst-app/sample_config.yaml
@@ -5,7 +5,7 @@ Ogólny opis danych:
 Analiza danych:
 Page 1:
     - Title: "MULTI OBSERVATION STUDY DLA SPECJALISTÓW I UNDERWRITERÓW"
-    - Charts: "Wykres kołowy przedstawiający procentowy udział wartości w kolumnie "Klasyfikacja".
+    - Charts: "Wykres kołowy przedstawiający procentowy udział wartości w kolumnie "Klasyfikacja"."
     - Description: "Marnotrawienia czasu. VA to wartość dodana, NVA-K to marnotrastwo koniecznie, NVA-O marnotrastwo oczywiste. Weź pod uwagę komentarze z kolumny Komentarz"
 Page 2:
     - Title: "MULTI OBSERVATION STUDY PODSUMOWANIE MS-A"
