Implement conversation management features in app.py, including saving, loading, and deleting conversations. Enhance main.py to start the Sigla Pandas Data Analyst App and handle errors related to app execution. Update sample_config.yaml to improve chart descriptions. Add requirements.txt for deployment dependencies.

--- a/apps/pandas-data-analyst-app/sample_config.yaml
+++ b/apps/pandas-data-analyst-app/sample_config.yaml
@@ -15,7 +15,7 @@ Page 2:
     - Description: "Marnotrawienia czasu. VA to wartość dodana, NVA-K to marnotrastwo koniecznie, NVA-O marnotrastwo oczywiste. Weź pod uwagę komentarze z kolumny Komentarz"
 Page 3:
     - Title: "MULTI OBSERVATION STUDY PODSUMOWANIE MS-A"
-    - Charts: "Brak wykresu"
+    - Charts: "Przedstaw wykres słupkowy z TOP 3 wartości "Podczynność" dla "Klasyfikacja""
     - Description: "Przedstaw tabelę z TOP 3 wartości "Podczynność" dla "Klasyfikacja"""
 Page 4:
     - Title: "MULTI OBSERVATION STUDY PODSUMOWANIE MS-A"
